crates/kaban-parser/tests/snapshots/expressions__match_statement_with_is_statement_and_pipes.snap
---
source: crates/kaban-parser/tests/expressions.rs
expression: print
---
input: 
        match (day_enum) {
            is Day.Monday
            | is Day.Tuesday
            | 32 => 20,
            to time is Day.Wednesday => buzz(),
        }
    

Block [
    Match {
        target: Identifier("day_enum"),
        arms: [
            Arm {
                left: MultipleMatchTargets [
                    ToIs {
                        original: Identifier("day_enum"),
                        binding: IdentifierBinding {
                            name: Identifier("day_enum"),
                            mutable: false,
                        },
                        is target: MemberAccess {
                            left: Identifier("Day"),
                            right: Identifier("Monday"),
                        },
                    },
                    ToIs {
                        original: Identifier("day_enum"),
                        binding: IdentifierBinding {
                            name: Identifier("day_enum"),
                            mutable: false,
                        },
                        is target: MemberAccess {
                            left: Identifier("Day"),
                            right: Identifier("Tuesday"),
                        },
                    },
                    IntLit("32"),
                ],
                right: IntLit("20"),
            },
            Arm {
                left: ToIs {
                    original: Identifier("day_enum"),
                    binding: IdentifierBinding {
                        name: Identifier("time"),
                        mutable: false,
                    },
                    is target: MemberAccess {
                        left: Identifier("Day"),
                        right: Identifier("Wednesday"),
                    },
                },
                right: FuncCall {
                    callee: Identifier("buzz"),
                    args: [],
                },
            },
        ],
    },
]
