crates/kaban-parser/tests/snapshots/expressions__member_access_assignment.snap
---
source: crates/kaban-parser/tests/expressions.rs
expression: print
---
input: a.b = 10;

Block [
    Assignment {
        left: MemberAccess {
            left: Identifier("a"),
            right: Identifier("b"),
        },
        right: IntLit("10"),
    },
]
