crates/kaban-parser/tests/snapshots/expressions__member_access_generic_instantiation.snap
---
source: crates/kaban-parser/tests/expressions.rs
expression: print
---
input: Person.Obj@<i32>;

Block [
    GenericInstantiation {
        callee: MemberAccess {
            left: Identifier("Person"),
            right: Identifier("Obj"),
        },
        args: [
            Type(I32),
        ],
    },
]
