crates/kaban-parser/tests/snapshots/expressions__methods_with_generic_instantiation.snap
---
source: crates/kaban-parser/tests/expressions.rs
expression: print
---
input: foo.buzz@<i32,>(10);

Block [
    MethodWithGenericInstantiation {
        callee: Identifier("foo"),
        method name: Identifier("buzz"),
        is mutable: false,
        generic_args: [
            Type(I32),
        ],
        args: [
            IntLit("10"),
        ],
    },
]
