crates/kaban-parser/tests/snapshots/expressions__mutable_and_non_mutable_method_calls.snap
---
source: crates/kaban-parser/tests/expressions.rs
expression: "format! (\"input: {}\\n\\n{:#?}\", input, ast.to_debugger())"
---
input: x:foo(x, y,); x.bazz();

Block [
    MethodCall {
        method name: Identifier("foo"),
        is mutable: true,
        args: [
            Identifier("x"),
            Identifier("y"),
        ],
    },
    MethodCall {
        method name: Identifier("bazz"),
        is mutable: false,
        args: [],
    },
]
