crates/kaban-parser/tests/snapshots/expressions__mutable_impl_access_method_call.snap
---
source: crates/kaban-parser/tests/expressions.rs
expression: print
---
input: Person::Core.new():set_name("foo");

Block [
    MethodCall {
        callee: MethodCall {
            callee: ImplAccess {
                left: Identifier("Person"),
                right: Identifier("Core"),
            },
            method name: Identifier("new"),
            is mutable: false,
            args: [],
        },
        method name: Identifier("set_name"),
        is mutable: true,
        args: [
            StringLit("\"foo\""),
        ],
    },
]
